--- a/style.css
+++ b/style.css
@@ -6,9 +6,11 @@
 body {
   min-height: 100%;
   background-image: url("poze/background2.jpg");
-  background-attachment: fixed;
   background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
 }
+
 html {
     height: auto;
     display: block;
@@ -16,7 +18,6 @@ html {
     padding: 0;    
 }
   
-
 .banner {
     background-size: cover;
     background-position: center;
@@ -199,7 +200,7 @@ display:none;
   background-size: cover;
 }
 .popup {
-  background-color: brown;
+  background-color: silver;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
 }
 .overlay {
@@ -214,59 +215,10 @@ display:none;
 .popup img{
   padding-top: 0;
   padding-left: 0;
-  width: 500px;
+  width: 800px;
   height: 600px;
 
 }
-.popupdreapta{
-  margin-left: 14%;
-  background-color: brown;
-  display: grid;
-  max-width: 10000%;
-
-}
-.popupdreapta h2 {
-  font-family: MV Boli;
-  position: relative;
-  top: 50%;
-  left: 10%;
-  font-size: 200%;
-  
-}
-.popupdreapta numar1 {
-  position: relative;
-  padding-top: 10%;
-  top: 50%;
-  left: 30%;
-  font-size: x-large;
-}
-.popupdreapta zone1{
-  margin-top: 10%;
-  font-family: MV Boli;
-  font-size: large;
-  color: darkgreen;
-
-}
-.popupdreapta numar2{
-  position: relative;
-  padding-top: 15%;
-  top: 50%;
-  left: 30%;
-  font-size: x-large;
-
-}
-.popupdreapta zone2{
-  margin-top: 10%;
-  font-family: MV Boli;
-  font-size: large;
-  color: darkgreen;
-}
-.popupdreapta img{
-  width: 15%;
-  height: 100%;
-  position: absolute;
-}
-
 .popup-close {
 position: absolute;
 top: 10px;
@@ -275,21 +227,18 @@ font-size: 20px;
 color: #333333;
 cursor: pointer;
 }
-.popupdreapta {
-  position: fixed;
-  padding-top: 0;
-  top: 0;
-  left: 50%;    
+@media (max-width: 1024px) and (max-height: 600px) {
+  .popup img{
+      padding-top: 0;
+      padding-left: 0;
+      width: 500px;
+      height: 400px;
+  }
+  .popup{
+      width: 500px;
+      height: 400px;
+  }
 }
-.pozadelivery img {
-  width: 38%;
-  height: 35%;
-  position: absolute;
-  bottom: 0;
-  right: 0;
-
-}
-
 /*welcome*/
 #welcome {
 	position: absolute;
@@ -303,12 +252,6 @@ cursor: pointer;
 	animation-duration: 0.5s;
 	animation-delay: 0.5s;
 	animation-fill-mode: forwards;
-}
-@media (max-width:) {
-  #welcome {
-    font-size: 2000px; /* Ajustează dimensiunea textului pentru dispozitive mobile */
-    margin-left: 100px; /* Mutați la dreapta cu 10px pe dispozitive mobile */
-  }
 }
 h5{
   color: black;
@@ -336,14 +279,28 @@ h6{
 	}
 }
 
+@media (max-width: 1280px) and (max-height: 800px) {
+  #welcome {
+    margin-left: 140px;
+  }
+  h5 {
+    margin-bottom: 20%;
+  }
+  h6{
+    margin-left:  0;
+    display: none;
+  }
+
+}
+
 /*carousel*/
 .slider-container {
   position: absolute;
-  bottom: 35vh;
-  width: 525px; /* Înălțimea și lățimea fixă a containerului */
-  height: 500px;
+  bottom: 32vh;
+  width: 520px;
+  height: 490px;
   overflow: hidden;
-  border-radius: 50%; /* Margini rotunde pentru întregul container */
+  border-radius: 50%; 
 }
 
 .slider {
@@ -359,18 +316,33 @@ h6{
   width: 100%;
   height: auto;
 }
-@media (max-width: 1200px) {
+@media (max-width: 1000px) {
   .slider-container {
-    font-size: 10px; 
-    margin-left: 0; 
-    margin-bottom: 800px;
+    width: 20%;
+    height: 10%;
+    border-radius: 50%;  
+    margin-bottom: 50vh;
   }
   .slider-slide img{
     max-width: 100%;
     height: auto;
-    border-radius: 100%;
-    }
+    border-radius: 50%;
+  }
+  .slider {
+    font-size: 10px;
+    border-radius: 10px;
+  }
 }
+@media (max-width: 1280px) and (max-height: 800px) {
+  .slider-container {
+    width: 20%; 
+    height: 30%;
+    margin-bottom: 20vh;
+  
+
+  }
+}
+
 
 
 
@@ -470,6 +442,23 @@ p10 img{
 .mijloc,img{
   height: 25%;
 }
+
+@media (max-width: 390px) and (max-height: 844px) {
+  .mijloc{
+    margin-bottom: 1000px;
+  }
+}
+@media (max-width: 700px) and (max-height: 844px) {
+  .slider-container {
+    width: 20%; 
+    height: 30%;
+    margin-bottom: 20vh;
+  
+
+  }
+}
+
+
 #locatie,
 #meniu {
   background-color:purple;
